syntax = "proto3";
package tendermint.v0_35.types;

option go_package = "github.com/cosmos/cosmos-sdk/tendermint/types";

import "gogoproto/gogo.proto";
import "tendermint/v0_35/crypto/keys.proto";

message ValidatorSet {
  repeated Validator validators         = 1;
  Validator          proposer           = 2;
  int64              total_voting_power = 3;
}

message Validator {
  bytes                             address           = 1;
  tendermint.v0_35.crypto.PublicKey pub_key           = 2 [(gogoproto.nullable) = false];
  int64                             voting_power      = 3;
  int64                             proposer_priority = 4;
}

message SimpleValidator {
  tendermint.v0_35.crypto.PublicKey pub_key      = 1;
  int64                             voting_power = 2;
}
